Fixed problem with overflowing text/images, Added image capabilities (need to test

--- a/src/public/css/chat_styles.css
+++ b/src/public/css/chat_styles.css
@@ -30,6 +30,7 @@
     opacity: 0;
     overflow: hidden;
     position: absolute;
+    left: 6px;
 }
 
 #iq-message-id-upload-button{
@@ -79,6 +80,10 @@
     padding: 10px 18px;
     border: 1px solid rgba(0,0,0,0);
     box-shadow: 0 0 10px rgba(0,0,0,0);
+}
+
+.iq-message-class-content{
+    width: inherit;
 }
 
 /* 
